# klover

./: .gitignore  CMakeLists.txt  Cargo.toml  DEV.md  Dockerfile  README.md  build.rs  compose.yml  xmake.lua
build-sys/: vmflag_config.rs  vmflag_map_ctor.rs
cmake/: version.cmake
core/engine/: bytecode.h  engine_defs.h  frame.c  frame.h
core/gc/: gc.c  gc.h  gc_heap.c  gc_heap.h  oop_closure.h  oop_storage.c  oop_storage.h
core/memory/: comp_space_defs.h  virt_space.c  virt_space.h
core/metaspace/: metaspace.c  metaspace.h
core/obj_model/: markword.h  obj_access.h  obj_desc.h  obj_layout.h  oop_hierarchy.h
core/oops/: markword.h  obj_desc.h
core/tests/: test_gc_heap.c  test_harness.h  test_interpreter.c  test_metaspace.c  test_oop_storage.c  test_virt_space.c
core/thread/: java_thread.h
core/utils/: global_defs.h
crates/: Cargo.toml
crates/thread/src/: lib.rs
doc/: coding_style.md
memory/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/include/: class_parser.h
rust/include/rust/: class_parser.h
rust/src/: lib.rs
rust/src/class_loader/: bootstrap_cld.rs  class_path.rs  cld.rs  cld_map.rs  load_error.rs  mod.rs  ms_api.rs  ms_box.rs  resolve.rs  symbol_handle.rs  symbol_table.rs
rust/src/class_parser/: acc_flags.rs  attr_info.rs  class_file.rs  class_reader.rs  cp_info.rs  field_info.rs  field_type.rs  interface_info.rs  method_info.rs  mod.rs  parse_error.rs
rust/src/gc_binding/: gc_binding.rs  mod.rs  obj_layout.rs  oop_codec.rs
rust/src/gc_bindings/: gc_bindings.rs  mod.rs  obj_layout.rs  oop_codec.rs  oop_handle.rs
rust/src/interpreter/: instructions.rs  interpreter.rs  mod.rs
rust/src/oops/: array_klass.rs  attr.rs  (+13 more)
rust/tests/: class_file_test.rs  ms_box_test.rs  phase_1_test.rs  symbol_table_test.rs  test_classloader.rs  test_interpreter.rs
src/: jni.rs  lib.rs  main.rs
src/class_data/: bootstrap_loader.rs  class_file_stream.rs  class_loader.rs  java_classes.rs  klass_table.rs  mod.rs
src/class_loader/: class_linker.rs  mod.rs  rtcp.rs
src/classfile/: access_flags.rs  class_loader.rs  class_loader_data.rs  class_loader_data_graph.rs  class_loader_graph.rs  class_loader_map.rs  cld_actor.rs  cld_graph.rs  constant_pool.rs  info_types.rs  java_classes.rs  mod.rs  parser.rs  stream.rs  symbol_table.rs  vm_symbols.rs
src/classloader/: class_linker.rs  mod.rs  rtcp.rs
src/code/: code_blob.rs  cp_cache.rs  method.rs  mod.rs
src/common/: mod.rs  tls.rs  universe.rs
src/engine/: bytecodes.rs  context.c  context.rs  engine_globals.rs  engine_runtime.rs  executor.rs  interpreter_runtime.rs  mod.rs  vm_engine.rs
src/flag_sys/: mod.rs  vm_flag.rs  vm_flags.rs
src/gc/: address.rs  api.rs  barrier_set.rs  gc_actor.rs  gc_plan.rs  interface.rs  managed_heap.rs  mem_allocator.rs  mod.rs  oop_map.rs  oop_storage.rs  oop_storage_actor.rs  oop_storage_set.rs
src/interpreter/: bytecodes.rs  executor.rs  interpreter_runtime.rs  mod.rs
src/jni/: mod.rs
src/memory/: CMakeLists.txt  allocation.c  allocation.h  allocation.rs  arena.c  arena.rs  basic_allocator.rs  box.h  bump_alloc.rs  bumper.rs  c_malloc.rs  compressed_space.rs  klass_space.rs  mem_region.rs  mod.rs  virt_space.c  virt_space.h  virt_space.rs
src/metaspace/: klass_allocator.c  klass_allocator.h  klass_allocator.rs  klass_cell.rs  klass_mem_pool.rs  klass_pool.rs  klass_space.c  klass_space.rs  metaspace.rs  mod.rs  ms_actor.rs
src/object/: klass.rs  mark_word.rs  mod.rs  obj_desc.rs  obj_handle.rs
src/oop/: klass.rs  mark_word.rs  mod.rs  obj_handle.rs
src/oops/: access.rs  array_class.rs  array_klass.rs  field.rs  klass.rs  klass_handle.rs  mark_word.h  mark_word.rs  mod.rs  normal_klass.rs  obj_desc.c  obj_desc.rs  obj_handle.rs  oop.rs  oop_handle.rs  oop_hierarchy.rs  prim_klass.rs  rt_attr.rs  rt_bytecode.rs  rt_constant_pool.rs  rt_cp_items.rs  rt_desc.rs  rt_field_info.rs  rt_method_info.rs  symbol.rs  symbol_table.rs  weak_handle.rs
src/prims/: jni.rs  jni_impl.c  jni_impl.rs  jni_md.h  jvm.rs  mod.rs
src/runtime/: CMakeLists.txt  actor_mailbox.rs  actor_mailboxes.rs  frame.rs  jvalue.rs  mod.rs  mutex.h  mutex_locker.c  mutex_locker.h  os.h  os.rs  rt_exceptions.rs  runtime_globals.rs  thread.rs  threadCritical.c  threadCritical.h  thread_critical.rs  tls.rs  universe.rs  vm_flags.rs  vm_thread.rs  vmflag_map.rs  vmflags.rs
src/util/: align.h  align.rs  globalDefinitions.h  global_defs.rs  llist.h  lock_free_stack.rs  macros.h  mod.rs
src/utils/: align.h  align.rs  easy_cell.rs  global_defs.h  global_defs.rs  handle.rs  linked_list.rs  lock_free_stack.rs  mod.rs
test_data/classes/: Adder.java  Arith.java  ControlFlow.java  HelloKlover.java  IntAdder.java  ObjTest.java  PrimKlass.java  SimpleAddition.java  Wide.java
tests/: klover_tests.rs
tests/java/: HelloWorld.java
tests/test_classfile/: mod.rs
(+28 files in other folders)
