[package]
name = "klover"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["staticlib"]

[dependencies]
klover-flag-sys-proc-macro = { path = "./src/flag_sys/proc_macro" }

bitflags = "2.9.3"
cafebabe = "0.9.0"
dashmap = "6.1.0"
enum-map = "2.7.3"
modular-bitfield = "0.13.0"
nix = { version = "0.30.1", features = ["fs", "mman"]}
once_cell = "1.21.3"
phf = { version = "0.12", features = ["macros"] }

[build-dependencies]
bindgen = "0.72.0"
cc = "1.0"
