[package]
name = "klover"
version = "0.1.0"
edition = "2021"

[lib]
name = "klover_core"
crate-type = ["staticlib"]

[dependencies]

bitflags = "2.9.3"
cafebabe = "0.9.0"
crossbeam = "0.8.4"
modular-bitfield = "0.13.1"
paste = "1.0.15"
region = "3.0.2"
tokio = { version = "1.49.0", features = ["sync"]}
